--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -19,3 +19,9 @@
     color: var(--color-title);
     transition: 0.3s ease;
 }
+
+@media (max-width: 1024px) {
+    .header__menu {
+        justify-content: space-around;
+    }
+}
