--- a/styles/components/contact.css
+++ b/styles/components/contact.css
@@ -18,4 +18,30 @@
     width: 800px;
     text-align: center;
     margin-bottom: 3rem;
+    font-weight: 300;
+}
+
+.contact__button {
+    width: 100px;
+    font-size: 1.2rem;
+    text-align: center;
+}
+
+@media (max-width: 1310px) {
+    .contact__content {
+        font-size: 1.2rem;
+    }
+}
+
+@media (max-width: 1024px) {
+    .contact__content {
+        width: 600px;
+    }
+  }
+
+@media (max-width: 640px) {
+    .contact__content {
+        font-size: 1rem;
+        width: 400px;
+    }
 }
