--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -42,3 +42,41 @@
     text-align: center;
     margin-bottom: 5rem;
 }
+
+@media (max-width: 1552px) {
+    .hero h1 {
+        font-size: 6rem;
+    }
+}
+
+@media (max-width: 1310px) {
+    .hero h1 {
+        font-size: 5rem;
+    }
+
+    .hero__profile-photo {
+        width: 120px;
+        height: 120px;
+    }
+
+    .hero p {
+        width: 600px;
+        font-size: 1.2rem;
+    }
+}
+
+@media (max-width: 640px) {
+    .hero h1 {
+        font-size: 4rem;
+    }
+
+    .hero__profile-photo {
+        width: 100px;
+        height: 100px;
+    }
+
+    .hero p {
+        width: 400px;
+        font-size: 1rem;
+    }
+}
