--- a/styles/components/projects.css
+++ b/styles/components/projects.css
@@ -115,3 +115,124 @@
 .imperativePrograming-content p {
     width: 400px;
 }
+
+@media (max-width: 1310px) {
+    .projects__description {
+        font-size: 1.2rem;
+        margin-bottom: 5rem;
+    }
+
+    .worldchess-img img {
+        width: 400px;
+        height: 400px;
+    }
+
+    .worldchess-content {
+        width: 400px;
+        height: 400px;
+    }
+
+    .worldchess-content p {
+        width: 300px;
+    }
+
+    .jiu-jitsu-img img {
+        width: 400px;
+        height: 400px;
+    }
+
+    .jiu-jitsu-content {
+        width: 400px;
+        height: 400px;
+    }
+
+    .jiu-jitsu-content p {
+        width: 300px;
+    }
+
+    .imperativePrograming-img img {
+        width: 400px;
+        height: 400px;
+    }
+
+    .imperativePrograming-content {
+        width: 400px;
+        height: 400px;
+    }
+
+    .imperativePrograming-content p {
+        width: 300px;
+    }
+  }
+
+  @media (max-width: 1024px) {
+    .projects__description {
+        font-size: 1rem;
+    }
+
+    .worldchess-img img {
+        width: 300px;
+        height: 300px;
+    }
+
+    .worldchess-content {
+        width: 300px;
+        height: 300px;
+        gap: 1rem;
+    }
+
+    .worldchess-content p {
+        width: 250px;
+        font-size: 0.8rem;
+    }
+
+    .jiu-jitsu-img img {
+        width: 300px;
+        height: 300px;
+    }
+
+    .jiu-jitsu-content {
+        width: 300px;
+        height: 300px;
+        gap: 1rem;
+    }
+
+    .jiu-jitsu-content p {
+        width: 250px;
+        font-size: 0.8rem;
+    }
+
+    .imperativePrograming-img img {
+        width: 300px;
+        height: 300px;
+    }
+
+    .imperativePrograming-content {
+        width: 300px;
+        height: 300px;
+        gap: 1rem;
+    }
+
+    .imperativePrograming-content p {
+        width: 250px;
+        font-size: 0.8rem;
+    }
+  }
+
+  @media (max-width: 640px) {
+    .projects__description {
+        text-align: center;
+    }
+
+    .worldchess {
+        flex-direction: column;
+    }
+
+    .jiu-jitsu {
+        flex-direction: column-reverse;
+    }
+
+    .imperativePrograming {
+        flex-direction: column;
+    }
+}
